Updated CSS for layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,6 @@ a.intext-link:hover, a.intext-link:focus {
 
 @media (max-width:1003px) {
   .project-thumbnail {
-    max-width: 256px;
   }
 }
 
@@ -464,7 +463,7 @@ a.intext-link:hover, a.intext-link:focus {
 
   .project {
     margin-top: 0;
-    height: 26.5rem;
+    height: 32rem;
   }
 }
 
