--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -398,7 +398,7 @@ h4.short-project-description {
 
 @media (max-width:767px) {
   .project {
-    height: 25rem;
+    height: 32rem;
   }
 }
 
@@ -473,6 +473,7 @@ h4.short-project-description {
   .project-thumbnail {
     padding-top: 1rem;
     /* max-width: 120px; */
+
   }
 }
 
